/*
 * Copyright Â© 2023 Paravela Limited
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not
 * use this file except in compliance with the License. You may obtain a copy of
 * the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 * License for the specific language governing permissions and limitations under
 * the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 */
syntax = "proto3";

option java_multiple_files = true;

package com.blockchaintp.besu.daml.protobuf;
import "google/protobuf/timestamp.proto";

message DamlOperationBatch {
  string version = 1;
  repeated DamlOperation operations = 2;
}

message DamlOperation {
  string version = 1;
  oneof payload {
    DamlTransaction transaction = 2;
    TimeKeeperUpdate timeUpdate = 4;
  };
  string submittingParticipant = 3;
  string correlationId = 5;
}

message DamlTransaction {
  string version = 1;
  bytes logEntryId = 2;
  bytes submission = 3;
}

message DamlLogEvent {
  string version = 1;
  bytes logEntryId = 2;
  bytes logEntry = 3;
  TimeKeeperUpdate timeUpdate = 4;
}

message TimeKeeperUpdate {
  string version = 1;
  google.protobuf.Timestamp timeUpdate = 2;
}

message DamlStateValueEnvelope {
  string version = 1;
  bytes value = 2;
  DamlACL acl = 3;
}

message DamlACL {
  string version = 1;
  bool public = 2;
  repeated string participantId = 3;
}

message ByteStringPair {
  string version = 1;
  bytes key = 2;
  bytes value = 3;
}

message ByteStringPairList {
  string version = 1;
  repeated ByteStringPair pairs = 2;
}
